fix : 예약 컨트롤러 리팩토링