@@ -1,73 +1,54 @@
 package com.camping.admin.controller;
 
 import com.camping.admin.domain.entity.Reservation;
-import com.camping.admin.domain.enums.ReservationStatus;
 import com.camping.admin.dto.ReservationResponse;
-import com.camping.admin.repository.ReservationRepository;
-import java.util.ArrayList;
+import com.camping.admin.dto.ReservationStatusUpdateRequest;
+import com.camping.admin.service.ReservationService;
+import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import io.micrometer.common.util.StringUtils;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/admin/reservations")
 @RequiredArgsConstructor
 public class ReservationAdminController {
 
-    private final ReservationRepository reservationRepository;
+    private final ReservationService reservationService;
 
     @GetMapping
     public ResponseEntity<List<ReservationResponse>> getAllReservations() {
-        List<ReservationResponse> all = reservationRepository.findAll().stream()
+        List<ReservationResponse> response = reservationService.findAllReservations().stream()
+                .filter(Objects::nonNull)
                 .map(ReservationResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ReservationResponse> result = new ArrayList<>();
-        if (all == null) {
-            // null이면 빈 리스트 반환
-        } else if (all.isEmpty()) {
-            // 그대로 빈 리스트 반환
-        } else {
-            for (ReservationResponse r : all) {
-                if (r != null) {
-                    result.add(r);
-                }
-            }
-        }
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(response);
     }
 
     @PatchMapping("/{reservationId}/status")
     public ResponseEntity<ReservationResponse> updateReservationStatus(
             @PathVariable Long reservationId,
-            @RequestBody Map<String, Object> body) {
-        Reservation reservation = reservationRepository.findById(reservationId)
-                .orElseThrow(() -> new IllegalArgumentException("Cannot find reservation with id: " + reservationId));
-
-        if (body == null || body.isEmpty()) {
-            return new ResponseEntity<>(ReservationResponse.from(reservation), HttpStatus.BAD_REQUEST);
+            @RequestBody ReservationStatusUpdateRequest request) {
+        if (request == null) {
+            return ResponseEntity.badRequest().build();
         }
 
         try {
-            Object statusObj = body.get("status");
-            if (statusObj == null) return new ResponseEntity<>(ReservationResponse.from(reservation), HttpStatus.BAD_REQUEST);
-            if (!(statusObj instanceof String)) throw new IllegalArgumentException("올바른 상태를 입력해 주세요.");
-
-            String statusValue = statusObj.toString();
-            if (StringUtils.isBlank(statusValue)) throw new IllegalArgumentException("올바른 상태를 입력해 주세요.");
-            ReservationStatus status = ReservationStatus.fromCode(statusValue);
-            reservation.setStatus(status.toString());
+            Reservation updatedReservation = reservationService.updateReservationStatus(reservationId, request.getStatus());
+            return ResponseEntity.ok(ReservationResponse.from(updatedReservation));
         } catch (IllegalArgumentException e) {
-            return new ResponseEntity<>(ReservationResponse.from(reservation), HttpStatus.BAD_REQUEST);
+            return ResponseEntity.badRequest().build();
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         }
-
-        reservationRepository.save(reservation);
-        return ResponseEntity.ok(ReservationResponse.from(reservation));
     }
 }
